Fix touch menu display on mobile and refresh when window size changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .game-picker {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
