--- a/src/Game.scss
+++ b/src/Game.scss
@@ -14,8 +14,8 @@
   -webkit-user-select: none;
   user-select: none;
   background-image: url(./images/table-bg-tile.jpg);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
