--- a/src/TouchMenu.scss
+++ b/src/TouchMenu.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  max-height: 100vh;
+  max-height: 100%;
   overflow-y: auto;
   padding: 5px 5px;
   background-color: gray;
